--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     justify-content: center;
     height: 100vh;
     overflow: hidden;
+    background-color: black;
 }
 
 .container{
@@ -20,6 +21,7 @@ body{
     box-shadow: 0 0 15px 1px #d3d;
     transition: box-shadow .3s ease-out;
     padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.15);
 }
 
 .container:hover{
@@ -43,7 +45,7 @@ h2{
     border-radius: 10px;
     padding: 10px 10px;
     color: #f3f;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 #customtext:focus{
